knowledge/main/default/objects/Knowledge__kav/Knowledge__kav.object-meta.xml
<CustomObject>
    <label>Knowledge</label>
    <pluralLabel>Knowledge</pluralLabel>
</CustomObject>