knowledge/main/default/objects/Knowledge__kav/fields/ArticleContent__c.field-meta.xml
<CustomField>
    <fullName>ArticleContent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Article Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>