knowledge/main/default/objects/Knowledge__kav/fields/ArticleId__c.field-meta.xml
<CustomField>
    <fullName>ArticleId__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Article Id</label>
    <type>Text</type>
</CustomField>