knowledge/main/default/objects/Knowledge__kav/fields/InsightOwner__c.field-meta.xml
<CustomField>
    <fullName>InsightOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insight Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Knowledge</relationshipName>
    <type>Lookup</type>
</CustomField>