knowledge/main/default/objects/Knowledge__kav/fields/InsightType__c.field-meta.xml
<CustomField>
    <fullName>InsightType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Insight Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>