knowledge/main/default/objects/Knowledge__kav/recordTypes/InsightArticle.recordType-meta.xml
<RecordType>
    <fullName>InsightArticle</fullName>
    <active>true</active>
    <compactLayoutAssignment
  >InsightArticleCompactLayout</compactLayoutAssignment>
    <description
  >Respresents articles related to Insight records based on Insight type.</description>
    <label>Insight Article</label>
</RecordType>