knowledge/main/default/objects/Knowledge__kav/listViews/InsightArticlesDrafts.listView-meta.xml
<ListView>
    <fullName>InsightArticlesDrafts</fullName>
    <columns>TITLE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER_ID</columns>
    <columns>InsightOwner__c</columns>
    <columns>InsightType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.InsightArticle</value>
    </filters>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Insight Articles - Drafts</label>
</ListView>